<resources>
    <string name="app_name">ExpensesApp</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Log In</string>
    <string name="password">Password:</string>
    <string name="forgot">Forgot Your Password?</string>
    <string name="register">No account? Sign Up</string>
    <string name="signup">Register</string>
    <string name="registered">Already have an account? Sign in</string>
    <string name="type">Type:</string>
    <string name="dashboard">Dashboard</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="logout">Logout</string>
    <string name="note">Note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="manager">Expense Manager</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="about">ExpensesApp is an easy to use application that allows you to track your income and expenses at a glance. Easily add, update or delete your transactions at a click of a button</string>
</resources>