<?xml version="1.0" encoding="utf-8"?>
<!--Login-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/background_light"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Email:"
                android:background="@drawable/background_edittext"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:padding="15dp"
                android:id="@+id/email_login"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:background="@drawable/background_edittext"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:padding="15dp"
                android:id="@+id/password_login"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/background_edittext"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:id="@+id/button_login"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/forgot"
                android:id="@+id/forget_password"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/register"
                android:id="@+id/signup_reg"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ExpensesApp is an easy to use application that allows you to track your income and expenses at a glance. Easily add, update or delete your transactions at a click of a button"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:padding="5dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>