<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/date_color"
                android:layout_margin="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/date_expense"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:maxLines="1"
                android:id="@+id/type_expense"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:maxLines="1"
                android:id="@+id/note_expense"
                android:layout_below="@+id/type_expense"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10000"
                android:textColor="@color/expense_amount"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/total_expense"
                />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>